# bookcli

./: .gitignore  README.md  book  book.bat  pyproject.toml
bookcli/: __init__.py  cache.py  cli.py  config.py  downloader.py  exceptions.py  models.py  opener.py  settings.py  utils.py
bookcli/database/: __init__.py  migrations.py
bookcli/providers/: __init__.py  base.py  google_books.py  gutenberg.py  internet_archive.py  openlibrary.py
bookcli/services/: __init__.py  history.py  ranking.py  search.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_cache.py  test_config.py  test_database.py  test_downloader.py  test_history.py  test_opener.py  test_providers.py  test_ranking.py  test_search.py  test_utils.py
